--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+allure-behave==2.13.2
+allure-python-commons==2.13.2
 attrs==23.2.0
 behave==1.2.6
 certifi==2023.11.17
@@ -5,17 +7,21 @@ charset-normalizer==3.3.2
 exceptiongroup==1.2.0
 h11==0.14.0
 idna==3.6
+iniconfig==2.0.0
 outcome==1.3.0.post0
 packaging==23.2
 parse==1.20.0
 parse-type==0.6.2
+pluggy==1.4.0
 PySocks==1.7.1
+pytest==8.0.0
 python-dotenv==1.0.0
 requests==2.31.0
 selenium==4.16.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+tomli==2.0.1
 trio==0.24.0
 trio-websocket==0.11.1
 urllib3==2.1.0
